--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,6 @@
-body {  div#root{    background-color: #222;    color: #8EE4AF;  }}
+body {
+    div#root {
+        background-color: #222;
+        color: #8EE4AF;
+    }
+}
